--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    echo  '$(System.DefaultWorkingDirectory)/MyReactProject/pipeline-test'
+    echo  !!!!!!!!!!!!!!!!!!!! '$(System.DefaultWorkingDirectory)/MyReactProject/pipeline-test'
     npm install
     npm run build
   displayName: 'npm install and build'
